// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has a url 1`] = `
<div
  className="components-monitor-event-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-event-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-event-monitor-grid-row-m__title"
    >
      <a
        href="http://some/url"
        rel="noopener"
        target="_blank"
      >
        Some Title
      </a>
    </h2>
    <div />
  </div>
  <FaPencil
    className="components-monitor-event-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when has changed 1`] = `
<div
  className="components-monitor-event-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-event-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-event-monitor-grid-row-m__title"
    >
      <a
        href="http://some/url"
        rel="noopener"
        target="_blank"
      >
        Some Title
      </a>
    </h2>
    <div>
      <span
        className="components-monitor-event-monitor-grid-row-m__tag-changed components-monitor-event-monitor-grid-row-m__tag"
      >
        changed
      </span>
    </div>
  </div>
  <FaPencil
    className="components-monitor-event-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when has no url 1`] = `
<div
  className="components-monitor-event-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-event-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-event-monitor-grid-row-m__title"
    >
      <span>
        Some Title
      </span>
    </h2>
    <div />
  </div>
  <FaPencil
    className="components-monitor-event-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when is ignored 1`] = `
<div
  className="components-monitor-event-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-event-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-event-monitor-grid-row-m__title"
    >
      <a
        href="http://some/url"
        rel="noopener"
        target="_blank"
      >
        Some Title
      </a>
    </h2>
    <div>
      <span
        className="components-monitor-event-monitor-grid-row-m__tag"
      >
        ignored
      </span>
    </div>
  </div>
  <FaPencil
    className="components-monitor-event-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when not in artfully 1`] = `
<div
  className="components-monitor-event-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-event-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-event-monitor-grid-row-m__title"
    >
      <a
        href="http://some/url"
        rel="noopener"
        target="_blank"
      >
        Some Title
      </a>
    </h2>
    <div>
      <span
        className="components-monitor-event-monitor-grid-row-m__tag-missing components-monitor-event-monitor-grid-row-m__tag"
      >
        not in artfully
      </span>
    </div>
  </div>
  <FaPencil
    className="components-monitor-event-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;
